# monte-carlo-sis-simulator

./: README.md  main.py  networks.py  plots.py  pyproject.toml  simulation.py  utils.py
results/: barabasi_albert_n=500_m=10.pickle  barabasi_albert_n=500_m=3.pickle  erdos_renyi_n=500_p=0.1.pickle  erdos_renyi_n=500_p=0.3.pickle  erdos_renyi_n=500_p=0.6.pickle  watts_strogatz_n=500_k=5_p=0.5.pickle
