[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "monte-carlo-sis-simulator"
version = "0.1.0"
description = "A Monte Carlo SIS Simulator"
authors = ["Simone Gigante <simonegigante17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
loguru = "^0.7.2"
